--- a/app/src/main/res/layout/item_pokedex.xml
+++ b/app/src/main/res/layout/item_pokedex.xml
@@ -53,13 +53,37 @@
                     android:textSize="25dp"
                     />
 
-                <TextView
+                <LinearLayout
+                    android:layout_width="200dp"
+                    android:layout_height="35dp"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_vertical"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/typeSlot1"
+                        android:layout_width="90dp"
+                        android:layout_height="25dp"
+                        android:layout_marginEnd="10dp"
+                        />
+
+                    <ImageView
+                        android:id="@+id/typeSlot2"
+                        android:layout_width="90dp"
+                        android:layout_height="25dp"
+
+                        />
+
+                    <!--<TextView
                     android:id="@+id/typePokemon"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:text="Type"
                     android:textSize="25dp"
-                    />
+                    />-->
+
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
