--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_width="280dp"
         android:layout_height="100dp"
         android:gravity="center"
-        android:text="POKEDEX"
+        android:text="@string/pokedexString"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
